--- a/web/html/common/prompt_modal.html
+++ b/web/html/common/prompt_modal.html
@@ -15,7 +15,7 @@
         title: '',
         type: '',
         value: '',
-        okText: '确定',
+        okText: 'Sure',
         visible: false,
         keyEnter(e) {
             if (this.type !== 'textarea') {
